# ssk

./: CMakeLists.txt  LICENSE  README.md  grammar.md
include/: context.hpp  evaluator.hpp  lexer.hpp  object.hpp  parser.hpp  runtime.hpp  state.hpp
sample/: test1.ssk
src/: evaluator.cpp  lexer.cpp  main.cpp  parser.cpp  runtime.cpp
